# database-manager

./: CMakeLists.txt  DatabaseManager.h  README.md  USAGE_DatabaseManager.cpp
drivers/: CMakeLists.txt  SQLite.cpp  SQLite.h
preparers/: CMakeLists.txt  SQLite.h  SQLite.tpp  createTables.sql
sample_structs/: MyObject.cpp  MyObject.h
